3 iteration.исправить недочеты