@@ -2,7 +2,6 @@ package ru.yandex.practicum.filmorate.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
@@ -33,7 +32,7 @@ public class UserService {
 
     public User createUser(User user) {
         Validator.validateUser(user);
-        if (StringUtils.isBlank(user.getName())) {
+        if (user.getName().isBlank()) {
             log.debug("Имя не может быть пустым ли указано некорректно. Имя присвоено по умолчанию: {}", user.getLogin());
             user = new User(user.getId(), user.getEmail(), user.getLogin(), user.getLogin(), user.getBirthday());
         } else {
@@ -44,7 +43,7 @@ public class UserService {
     }
 
     public User updateUser(User user) {
-        if (userStorage.existsUserById(user.getId())) {
+        if (userStorage.findUserById(user.getId()).isPresent()) {
             userStorage.putUser(user);
         } else {
             log.error("Пользователя нет в списке");
@@ -55,7 +54,7 @@ public class UserService {
     }
 
     public User deleteUser(User user) {
-        if (userStorage.existsUserById(user.getId())) {
+        if (userStorage.findUserById(user.getId()).isPresent()) {
             userStorage.deleteUser(user);
         } else {
             log.error("Пользователя нет в списке");
@@ -65,20 +64,20 @@ public class UserService {
         return user;
     }
 
-    public Optional<User> findUserById(String userById) {
+    public Optional<User> findUserById(String userId) {
         long id;
-        if (userById == null || userById.isBlank()) {
+        if (userId.isEmpty() || userId.isBlank()) {
             throw new ValidationException("ID пользователя не может быть пустым");
         }
         try {
-            id = Validator.convertToLongUser(userById);
+            id = Validator.convertToLongUser(userId);
         } catch (NumberFormatException e) {
             throw new ValidationException("ID должно быть числом");
         }
         if (id <= 0) {
             throw new ValidationException("ID должно быть положительным");
         }
-        if (userStorage.existsUserById(id)) {
+        if (userStorage.findUserById(id).isPresent()) {
             return userStorage.findUserById(id);
         } else {
             throw new UserNotFoundException(id);
@@ -86,45 +85,45 @@ public class UserService {
     }
 
     public User addFriends(String friend, String user) {
-        long friendById = Validator.convertToLongUser(friend);
-        long userById = Validator.convertToLongUser(user);
-        Friendship friendship = new Friendship(friendById, userById);
-        if (friendsStorage.isExist(friendship)) {
+        long friendId = Validator.convertToLongUser(friend);
+        long userId = Validator.convertToLongUser(user);
+        Friendship friendship = new Friendship(friendId, userId);
+        if (friendsStorage.findFriendship(friendship).isPresent()) {
             if (friendsStorage.status(friendship)) {
-                log.error(USER_WITH_NUMBER + friendById + USER_WITH_NUMBER + userById + " уже друзья");
-                throw new WorkApplicationException(USER_WITH_NUMBER + friendById + USER_WITH_NUMBER + userById + " уже друзья");
+                log.error(USER_WITH_NUMBER + friendId + USER_WITH_NUMBER + userId + " уже друзья");
+                throw new WorkApplicationException(USER_WITH_NUMBER + friendId + USER_WITH_NUMBER + userId + " уже друзья");
             } else {
                 friendsStorage.put(friendship);
-                log.info(USER_WITH_NUMBER + userById + " добавил в друзья пользователя № " + friendById);
+                log.info(USER_WITH_NUMBER + userId + " добавил в друзья пользователя № " + friendId);
             }
         } else {
             friendsStorage.add(friendship);
-            log.info(USER_WITH_NUMBER + friendById + " добавил в друзья пользователя № " + userById);
+            log.info(USER_WITH_NUMBER + friendId + " добавил в друзья пользователя № " + userId);
         }
         return findUserById(friend).get();
     }
 
     public User delFriends(String userOne, String userTwo) {
-        long friendById = Validator.convertToLongUser(userOne);
-        long userById = Validator.convertToLongUser(userTwo);
-        Friendship friendship = new Friendship(friendById, userById);
-        if (friendsStorage.isExist(friendship)) {
-            log.error(USER_WITH_NUMBER + friendById + USER_WITH_NUMBER + userById + " пока не друзья");
+        long friendId = Validator.convertToLongUser(userOne);
+        long userId = Validator.convertToLongUser(userTwo);
+        Friendship friendship = new Friendship(friendId, userId);
+        if (friendsStorage.findFriendship(friendship).isPresent()) {
+            log.error(USER_WITH_NUMBER + friendId + USER_WITH_NUMBER + userId + " пока не друзья");
             friendsStorage.delete(friendship);
         } else {
-            log.error(USER_WITH_NUMBER + userById + " и " + USER_WITH_NUMBER + friendById + " не друзья.");
-            throw new WorkApplicationException(USER_WITH_NUMBER + userById + " и " + USER_WITH_NUMBER + friendById + " не друзья.");
+            log.error(USER_WITH_NUMBER + userId + " и " + USER_WITH_NUMBER + friendId + " не друзья.");
+            throw new WorkApplicationException(USER_WITH_NUMBER + userId + " и " + USER_WITH_NUMBER + friendId + " не друзья.");
         }
         return findUserById(userOne).get();
     }
 
     public List<User> friendsList(String user) {
-        long userById = Validator.convertToLongUser(user);
+        long userId = Validator.convertToLongUser(user);
         List<User> friendsList = new ArrayList<>();
-        for (Long friend : friendsStorage.getAllById(userById)) {
+        for (Long friend : friendsStorage.getAllById(userId)) {
             friendsList.add(userStorage.findUserById(friend).get());
         }
-        log.info("Список друзей пользователя № " + userById);
+        log.info("Список друзей пользователя № " + userId);
         return friendsList;
     }
 
